<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_title_cat_aboutYou">
        <EditTextPreference
            app:icon="@drawable/ic_person_outline_black_24dp"
            app:singleLine="true"
            app:dialogTitle="@string/pref_title_item_name_dialogTitle"
            app:key="profileName"
            app:summary="@string/pref_desc_item_name"
            app:title="@string/pref_title_item_name" />

        <Preference
            app:key="filePicker"
            app:icon="@drawable/ic_tag_faces_black_24dp"
            app:summary="@string/pref_desc_item_image"
            app:title="@string/pref_title_item_image" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_title_cat_feed">
        <Preference
            app:key="signIn"
            app:icon="@drawable/ic_sync_black_24dp"
            app:summary="@string/pref_desc_item_signIn"
            app:title="@string/pref_title_item_signIn" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_title_cat_application">
        <ListPreference
            app:defaultValue="1"
            app:key="appTheme"
            app:icon="@drawable/ic_color_lens_black_24dp"
            app:summary="@string/pref_desc_item_appTheme"
            app:title="@string/pref_title_item_appTheme" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
